--- a/Admin/Admin/src/Components/AddCourseForm/AddCourseForm.css
+++ b/Admin/Admin/src/Components/AddCourseForm/AddCourseForm.css
@@ -6,6 +6,7 @@
   max-height: 80vh;
   /* padding-right: 10px; */
   overflow-y: auto;
+  padding-right: 40px;
 }
 
 .form-wrapper::-webkit-scrollbar {
@@ -27,10 +28,11 @@
 }
 
 .premium-form {
-  padding: 2rem;
+  /* padding: 7rem; */
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  min-width: 600px;
 }
 
 /* .form-title {
@@ -168,7 +170,7 @@ textarea {
 }
 
 .btn-primary {
-  background: #2563eb;
+  background: #2563eb !important;
   color: white;
   border: none;
   padding: 0.8rem 2rem;
@@ -246,7 +248,6 @@ textarea {
   color: #666;
 }
 
-
 .toggle-control:hover {
   border-color: #007bff;
   background: #f0f7ff;
@@ -263,8 +264,6 @@ textarea {
   background: #f59e0b; /* Amber/Gold color */
   border-color: #f59e0b;
 }
-
-
 
 @media (max-width: 768px) {
   .form-grid,
