--- a/Admin/Admin/src/Components/AdminBlogManager/AddBlogForm/AddBlogForm.css
+++ b/Admin/Admin/src/Components/AdminBlogManager/AddBlogForm/AddBlogForm.css
@@ -77,6 +77,7 @@
    HEADER
 ================================ */
 .modal-header-styled {
+  position: sticky;
   padding: 1.6rem 1.8rem;
   display: flex;
   justify-content: space-between;
@@ -125,6 +126,9 @@
   flex-direction: column;
   gap: 1.4rem;
   font-family: "Inter", sans-serif;
+  /* background-color: red; */
+  min-width: 600px;
+
 }
 
 .form-section {
@@ -389,3 +393,5 @@
     border-radius: 0;
   }
 }
+
+
