--- a/Admin/Admin/src/Css/ProgramManagement.css
+++ b/Admin/Admin/src/Css/ProgramManagement.css
@@ -219,7 +219,9 @@
   top: 10px; /* Sticks to top when scrolling */
   z-index: 10;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-  overflow-x: visible;
+ max-height: 60px;            
+  /* overflow-x: auto; */
+  overflow-y: auto;
 }
 
 .nav-label {
@@ -576,4 +578,9 @@
 /* Support for smooth scrolling jump links */
 html {
   scroll-behavior: smooth;
+}
+@media (max-width: 780px) {
+  .category-quick-nav{
+    display: none;
+  }
 }
