--- a/frontend/brightcoders-frontend/src/Css/FeaturedCourses.css
+++ b/frontend/brightcoders-frontend/src/Css/FeaturedCourses.css
@@ -14,7 +14,7 @@
   text-align: center;
   font-family: "mv boli", serif !important;
   color: #1e3a8a;
-  margin-bottom: 33px;
+  margin-bottom: 30px !important;
   width: 70%;
 }
 
