--- a/frontend/brightcoders-frontend/src/Css/AboutUs.css
+++ b/frontend/brightcoders-frontend/src/Css/AboutUs.css
@@ -22,7 +22,8 @@
 .about-hero {
   width: 100%;
   min-height: 20vh;
-  background-image: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)),
+  background-image:
+    linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)),
     url("https://images.pexels.com/photos/421129/pexels-photo-421129.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -83,6 +84,12 @@
 /* ==========================
    MISSION & VISION
 ========================== */
+.sr-only {
+  text-align: center;
+  font-size: 2rem;
+  /* margin-bottom: 40px; */
+  color: #084b83;
+}
 .mission-vision {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
