--- a/frontend/brightcoders-frontend/src/Css/FeaturedCourses.css
+++ b/frontend/brightcoders-frontend/src/Css/FeaturedCourses.css
@@ -10,7 +10,8 @@
 }
 
 .header-paragraph {
-  font-size: 25px !important;
+  /* font-size: 25px !important; */
+      font-size: 16px !important;
   text-align: center;
   font-family: "mv boli", serif !important;
   color: #1e3a8a;
@@ -64,7 +65,7 @@
   }
 
   .header-paragraph {
-    font-size: 20px !important;
+    /* font-size: 20px !important; */
     padding: 10px 0;
     width: 100%;
   }
@@ -97,7 +98,7 @@
   }
 
   .header-paragraph {
-    font-size: 22px !important;
+    /* font-size: 22px !important; */
     width: 100%;
   }
 
@@ -130,7 +131,7 @@
   }
 
   .header-paragraph {
-    font-size: 25px;
+    /* font-size: 25px; */
     width: 100%;
   }
 
@@ -151,7 +152,7 @@
   }
 
   .header-paragraph {
-    font-size: 26px;
+
     width: 100%;
   }
 
@@ -193,7 +194,7 @@
 /* Extra large screens 1600–1919px */
 @media (min-width: 1600px) and (max-width: 1919px) {
   .header-paragraph {
-    font-size: 27px;
+    /* font-size: 27px; */
     width: 80%;
   }
 
@@ -218,7 +219,7 @@
   }
 
   .header-paragraph {
-    font-size: 29%;
+    /* font-size: 29%; */
     width: 70%;
   }
 
