still fixing some minor bugs

--- a/Admin/Admin/src/Components/AdminRegistrationManager/RegistrationDetailsModal/RegistrationDetailsModal.css
+++ b/Admin/Admin/src/Components/AdminRegistrationManager/RegistrationDetailsModal/RegistrationDetailsModal.css
@@ -280,6 +280,13 @@
   display: block;
   margin-top: 4px;
 }
+
+.doc-pending {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* --- Print Styles --- */
 @media print {
   .modal-overlay {
